@@ -74,6 +74,7 @@ udp_socket::udp_socket(io_service& ios)
 	, m_restart_v6(false)
 #endif
 	, m_socks5_sock(ios)
+	, m_retry_timer(ios)
 	, m_resolver(ios)
 	, m_queue_packets(false)
 	, m_tunnel_packets(false)
@@ -1464,7 +1465,15 @@ void udp_socket::hung_up(error_code const& e)
 
 	if (e == boost::asio::error::operation_aborted || m_abort) return;
 
-	// the socks connection was closed, re-open it
+	// the socks connection was closed, re-open it in a bit
+	m_retry_timer.expires_from_now(seconds(5));
+	m_retry_timer.async_wait(boost::bind(&udp_socket::retry_socks_connect
+		, this, _1));
+}
+
+void udp_socket::retry_socks_connect(error_code const& ec)
+{
+	if (ec) return;
 	set_proxy_settings(m_proxy_settings);
 }
 
