@@ -1,3 +1,4 @@
+	* delay 5 seconds before reconnecting socks5 proxy for UDP ASSOCIATE
 	* fix NAT-PMP crash when removing a mapping at the wrong time
 	* improve path sanitization (filter unicode text direction characters)
 	* deprecate partial_piece_info::piece_state
